--- a/_posts/2017-09-24-hackrice.md
+++ b/_posts/2017-09-24-hackrice.md
@@ -7,7 +7,9 @@ title: HackRice
 My adventures begin. I am packed, sitting in my room, waiting for Chris Brown Denny to come pick me up. He has not responded to my messages. I have already missed my alternative way to Houston. CBD where are you.
 
 #### Fri 6:47 PM
-After about 3 hours or so of driving Chris and I have made it. Traffic was ok, Chris drives pretty fast, I was definitely scared at some points. But we made it. Found the bus over to the event, it's right next to the Brochstein Pavilion, which is really exciting! Got checked in, got a shirt, found Eric, now they're going through the possible prizes. Zzzzzz
+After about 3 hours or so of driving Chris and I have made it. Traffic was ok, Chris drives pretty fast, I was definitely scared at some points. But we made it. Found the bus over to the event, it's right next to the Brochstein Pavilion, which is really exciting! Got checked in, got a shirt, found [Eric][1] (my partner), now they're going through the possible prizes. Zzzzzz
+
+[1]: http://ericlee123.github.io
 
 #### Fri 8:01 PM
 Eric and I have just gotten dinner. I'm very impressed. It's Thai. It's very good. We are also coming to settle on an idea. Something something future prediction bitcoin arbitrage...
@@ -145,3 +147,10 @@ We win the HBK prize - beats by Dr Dre. We don't get the Capital One prize - $20
 
 #### Sun 2:56 PM
 Third place is PySight. This is a python flask web app wrapper around a object detection and voice to speech API. It does literally nothing interesting. Second place is Cruise. They are the only ones with an interesting project. Brake and turn lights on a longboard. First place is STIC: a selfie stick with a phone and ultrasonic sensor for the blind. Hooks into Microsoft object detection API. HackRice is concluded. This is the shoddiest batch of winners I've ever seen in a hackathon. Time to go home.
+
+#### Postscript
+I've been getting flack for such a negative post, so I do want to make a small ammendment: I love hackathons, realy enjoy going to them, and don't go for the prizes. The prizes here were awarded dissapointingly, but I still had a great time. Overall it was a great event!
+
+See the final product here: [YABA][2]
+
+[2]: https://github.com/samm81/YABA
