--- a/_posts/2017-06-14-ditch-day.md
+++ b/_posts/2017-06-14-ditch-day.md
@@ -216,9 +216,13 @@ Actually first we had to pick the cars. Teams got to pick in order of their posi
 
 ![race3](/assets/ditch-day/race3.jpg)
 
-<video width="100%" controls="controls">
-  <source src="/assets/ditch-day/race4.mp4" type="video/mp4">
-</video>
+<div class="video">
+  <video width="100%" controls>
+    <source src="/assets/ditch-day/race4.webm" type="video/webm">
+    <source src="/assets/ditch-day/race4.mp4" type="video/mp4">
+    <p>Your browser does not support HTML5 video. Here is a <a href="/assets/ditch-day/race4.mp4">link to the video</a> instead.</p>
+  </video>
+</div>
 
 ![race5](/assets/ditch-day/race5.jpg)
 
